ultimos ajustes da seçao de tarefas

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -12,6 +12,10 @@
                 </button>
             </form>
         </div>
+      <div class="informacoes">
+        <p>5 tarefas</p>
+        <a href="">limpar tarefas</a>
+      </div>
     </section>
     
 </main>
