primeiros ajustes do desktop

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -13,9 +13,22 @@
             </form>
         </div>
       <div class="informacoes">
-        <p>5 tarefas</p>
+        <p>5 tarefas</p>        
         <a href="">limpar tarefas</a>
+     
+        <div class="botoes">
+        <a href="">todas</a>
+        <a href="">ativas</a>
+        <a href="">completas</a>
+        </div>
+    
       </div>
+    </section>  
+
+    <section class="botoes">
+        <a href="">todas</a>
+        <a href="">ativas</a>
+        <a href="">completas</a>
     </section>
     
 </main>
