ultimos ajustes da responsividade no desktop

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -17,7 +17,7 @@
         <a href="">limpar tarefas</a>
      
         <div class="botoes">
-        <a href="">todas</a>
+        <a href="" class="active">todas</a>
         <a href="">ativas</a>
         <a href="">completas</a>
         </div>
@@ -26,7 +26,7 @@
     </section>  
 
     <section class="botoes">
-        <a href="">todas</a>
+        <a href=""class="active">todas</a>
         <a href="">ativas</a>
         <a href="">completas</a>
     </section>
