--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,15 +7,20 @@
 
 :root{
     --bg-header-mobile: url(../imagens/pg-hader-moble-lighit.png);
+    --bg-header-desktop:url(../imagens/pg-hader-pc-lighit.png);
     --input-box-shadow:rgba(194, 195, 214, 0.50);
     --input-color: #494c6b;
+    --placeholder--color:#9495a5;
     --button-color:#393a4d;
+    --button-color-hover: #494c6b;
     --bg-body: #fafafa;
     --bg-tarefas: #fff;
     --box-shadow:0px 35px 50px -15px rgba(194, 195, 214, 0.50);
     --border-color:#e3e4f1;
     --text-color: #494c6b;
     --info-text-color:#9495a5;
+    --info-botton-hover:#494c6b;
+    --info-botton-active: #3a7cfd;
 }
 
 body {
@@ -65,6 +70,11 @@ header form input{
     font-size: 0.75rem;
     color: var(--input-color);
 }
+
+header form input::placeholder{
+    color: var(--placeholder--color);
+}
+
 header form button{
     padding: 0.75rem;
     border-radius: 0.3125rem;
@@ -74,7 +84,6 @@ header form button{
 }
 
 main{
-    min-height: calc(100vh - 12.5rem);
     padding-inline: 1.75rem;
 }
 
@@ -150,7 +159,48 @@ main{
     font-size: 0.875rem;
 }
 
+.botoes .active{
+    color: var(--info-botton-active);
+}
+
 @media(min-width: 1000px) {
+
+    header{
+        background-image: var(--bg-header-desktop);
+        height: 18.75rem;
+        padding-top: 4.37rem;
+    }
+
+    header div div {
+        margin-bottom: 3rem;
+    }
+
+    header form input {
+        padding: 1.25rem 1.5rem; 
+        font-size: 1.125rem;
+    }
+
+    header form button:hover {
+        cursor: pointer;
+        background: var(--button-color-hover);
+    }
+
+    .tarefas{
+        margin-top: -3rem;
+    }
+
+    .tarefas .tarefa{
+        padding: 1.25rem 1.5rem; 
+    }
+
+    header form button {
+        font-size: 1.125rem;
+    }
+
+    .tarefa div {
+        font-size: 1.125rem; ;
+    }
+
     section.botoes{
         display: none;
     }
@@ -158,8 +208,17 @@ main{
     .informacoes .botoes{
         display: flex;
         padding: 0;
-        margin-top: 0;
+        margin: 0;
     }
+
+    .informacoes{
+        font-size: 0.875rem;
+    }
+
+    .informacoes a:hover{
+        color: var(--button-color-hover);
+    }
+
     .tarefa button {
         visibility: hidden;
     }
@@ -173,4 +232,7 @@ main{
     .tarefa:hover button{
         visibility: initial;
     }
+
+  
+
 }
