--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,9 +10,10 @@
     --bg-header-desktop:url(../imagens/pg-hader-pc-lighit.png);
     --input-box-shadow:rgba(194, 195, 214, 0.50);
     --input-color: #494c6b;
+    --input-bg:#fff;
     --placeholder--color:#9495a5;
-    --button-color:#393a4d;
-    --button-color-hover: #494c6b;
+    --button-color:#494c6b;
+    --button-color-hover:#393a4d ;
     --bg-body: #fafafa;
     --bg-tarefas: #fff;
     --box-shadow:0px 35px 50px -15px rgba(194, 195, 214, 0.50);
@@ -20,6 +21,25 @@
     --text-color: #494c6b;
     --info-text-color:#9495a5;
     --info-botton-hover:#494c6b;
+    --info-botton-active: #3a7cfd;
+}
+
+body.dark{
+    --bg-header-mobile: url(../imagens/pg-hader-moble-dark.png);
+    --bg-header-desktop:url(../imagens/pg-hader-pc-dark.png);
+    --input-box-shadow:rgba(0, 0, 0.50);
+    --input-color: #c8cbe7;
+    -input-bg:#25273d;
+    --placeholder--color:#767992;
+    --button-color:#25273d;
+    --button-color-hover: #c8cbe7;
+    --bg-body: #171823;
+    --bg-tarefas: #25273d;
+    --box-shadow:0px 35px 50px -15px rgba(0, 0, 0.50);
+    --border-color:#393a4d;
+    --text-color: #c8cbe7;
+    --info-text-color:#5b5e7e;
+    --info-botton-hover:#e3e4f1;
     --info-botton-active: #3a7cfd;
 }
 
@@ -69,6 +89,7 @@ header form input{
     outline: none;
     font-size: 0.75rem;
     color: var(--input-color);
+    background: var(--input-bg);
 }
 
 header form input::placeholder{
@@ -232,7 +253,5 @@ main{
     .tarefa:hover button{
         visibility: initial;
     }
-
-  
 
 }
