--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -71,6 +71,12 @@ header div div{
     margin-bottom: 2.5rem;
 }
 
+header div h1{
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
 header div h1 {
     color: #fff;
     text-transform: uppercase;
