--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -19,9 +19,11 @@
     --box-shadow:0px 35px 50px -15px rgba(194, 195, 214, 0.50);
     --border-color:#e3e4f1;
     --text-color: #494c6b;
+    --todo-complete-color:#d1d2da;
     --info-text-color:#9495a5;
     --info-botton-hover:#494c6b;
     --info-botton-active: #3a7cfd;
+
 }
 
 body.dark{
@@ -38,6 +40,7 @@ body.dark{
     --box-shadow:0px 35px 50px -15px rgba(0, 0, 0.50);
     --border-color:#393a4d;
     --text-color: #c8cbe7;
+    --todo-complete-color:#4d5067;
     --info-text-color:#5b5e7e;
     --info-botton-hover:#e3e4f1;
     --info-botton-active: #3a7cfd;
@@ -112,6 +115,11 @@ header form button{
 
 main{
     padding-inline: 1.75rem;
+}
+
+.completa label {
+    text-decoration: line-through;
+    color: var(--todo-complete-color);
 }
 
 
