--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -5,7 +5,7 @@
             <form action="">
                 {{#if this.completa}}
 
-                    <input type="checkbox" id="tarefa-{{this.id}}" checked>
+                    <input type="checkbox" id="tarefa-{{this.id}}" checked onchange="descompletarTarefa({{this.id}})">
                 <label for="tarefa-1{{this.id}}">{{this.descricao}}</label>
 
                 {{else}}
@@ -23,7 +23,7 @@
 
        {{/each}}
       <div class="informacoes">
-        <p>5 tarefas</p>        
+        <p>{{quantidadeTarefasAtivas}} tarefas</p>        
         <a href="">limpar tarefas</a>
      
         <div class="botoes">
