--- a/views/ativas.handlebars
+++ b/views/ativas.handlebars
@@ -1,3 +1,5 @@
+
+
 <main>
     <section class="tarefas">
        {{#each tarefas}}
@@ -9,7 +11,7 @@
                 <label for="tarefa-1{{this.id}}">{{this.descricao}}</label>
             </div>
 
-                <button>
+               <button onclick="excluirTarefa({{this.id}})">
                     <img src="/imagens/x-icon.png" alt="icone de X para excluir uma tarefa">
                 </button>
             </form>
@@ -18,13 +20,14 @@
        {{/each}}
       <div class="informacoes">
         <p>{{quantidadeTarefas}} tarefas</p>        
-        <a href="">limpar tarefas</a>
      
         <div class="botoes">
         <a href="/">todas</a>
         <a href="/ativas" class="active" >ativas</a>
         <a href="/completas">completas</a>
         </div>
+
+            <a href="/limpartarefas">limpar tarefas</a>
     
       </div>
     </section>  
