--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,3 +1,5 @@
+{{#if tarefas}}
+
 <main>
     <section class="tarefas">
        {{#each tarefas}}
@@ -24,13 +26,14 @@
        {{/each}}
       <div class="informacoes">
         <p>{{quantidadeTarefasAtivas}} tarefas</p>        
-        <a href="">limpar tarefas</a>
      
         <div class="botoes">
         <a href="/" class="active">todas</a>
         <a href="/ativas">ativas</a>
         <a href="/completas">completas</a>
         </div>
+
+        <a href="/limpartarefas">limpar tarefas</a>
     
       </div>
     </section>  
@@ -42,3 +45,5 @@
     </section>
     
 </main>
+
+{{/if}}
